--- a/天盛.html
+++ b/天盛.html
@@ -374,7 +374,7 @@
      <div class="beian" > 
          <div class="xian">
           <p>E族生活&nbsp;&nbsp;|&nbsp;&nbsp;居家维修保养&nbsp;&nbsp;|&nbsp;&nbsp;住宿优惠信息&nbsp;&nbsp;|&nbsp;&nbsp;出行接送 &nbsp;&nbsp;|&nbsp;&nbsp;E族活动&nbsp;&nbsp;|&nbsp;&nbsp;E族爱心&nbsp;&nbsp;|&nbsp;&nbsp;积分商城</p>
-     	  <p><img src=""/>© 2017-2018  E族之家  版权所有，并保留所有权利。ICP备案证书号：粤ICP备17127392号</p>
+     	  <p>© 2017-2018  E族之家  版权所有，并保留所有权利。ICP备案证书号：粤ICP备17127392号</p>
          </div>
      </div>
 </body>
